@@ -1,3 +1,6 @@
+2011-04-01 lucas
+* Added a new script with solver informations.
+
 2011-03-31 lucas
 * Since r44521 the default preferences from core are not disabled anymore., hence the preferences created by configurator has low priority.
 
